# Boundary-Tracing-Moore-Neighbours

./: .gitignore  CMakeLists.txt  PixelCoords2D.cpp  PixelCoords2D.h  README.md  backup_test_mat.txt  boundary_tracing.cpp  boundary_tracing.h  finding_non_zero_pixels.cpp  finding_non_zero_pixels.h  main.cpp  mat_from_file.cpp  mat_from_file.h  test_mat.txt
